--- a/package.json
+++ b/package.json
@@ -124,6 +124,11 @@
             "import": "./dist/src/react/apollo-client-nextjs/index.js",
             "require": "./dist/src/react/apollo-client-nextjs/index.cjs"
         },
+        "./react/apollo-client-nextjs/rsc": {
+            "types": "./dist/src/react/apollo-client-nextjs/apollo-client-nextjs-rsc.d.ts",
+            "import": "./dist/src/react/apollo-client-nextjs/apollo-client-nextjs-rsc.js",
+            "require": "./dist/src/react/apollo-client-nextjs/apollo-client-nextjs-rsc.cjs"
+        },
         "./react/apollo-error": {
             "types": "./dist/src/react/apollo-error/index.d.ts",
             "import": "./dist/src/react/apollo-error/index.js",
@@ -229,7 +234,7 @@
         "globals": "16.2.0",
         "graphql": "16.11.0",
         "graphql-ws": "6.0.5",
-        "i18next": "25.2.1",
+        "i18next": "25.3.0",
         "jsdom": "26.1.0",
         "localforage": "1.10.0",
         "migrate-mongo": "12.1.3",
@@ -288,9 +293,6 @@
         "glob": "11.0.3",
         "lint-staged": "16.1.2",
         "node-modules-inspector": "1.0.0",
-        "playwright": "1.53.1",
-        "postcss": "8.5.6",
-        "postcss-modules": "6.0.1",
         "sass": "1.89.2",
         "simple-git-hooks": "2.13.0",
         "tsx": "4.20.3",
