--- a/package.json
+++ b/package.json
@@ -125,9 +125,9 @@
             "require": "./dist/src/react/apollo-client-nextjs/index.cjs"
         },
         "./react/apollo-client-nextjs/rsc": {
-            "types": "./dist/src/react/apollo-client-nextjs/apollo-client-nextjs-rsc.d.ts",
-            "import": "./dist/src/react/apollo-client-nextjs/apollo-client-nextjs-rsc.js",
-            "require": "./dist/src/react/apollo-client-nextjs/apollo-client-nextjs-rsc.cjs"
+            "types": "./dist/src/react/apollo-client-nextjs/apollo-client-nextjs.rsc.d.ts",
+            "import": "./dist/src/react/apollo-client-nextjs/apollo-client-nextjs.rsc.js",
+            "require": "./dist/src/react/apollo-client-nextjs/apollo-client-nextjs.rsc.cjs"
         },
         "./react/apollo-error": {
             "types": "./dist/src/react/apollo-error/index.d.ts",
@@ -233,6 +233,7 @@
         "fs-extra": "11.3.0",
         "globals": "16.2.0",
         "graphql": "16.11.0",
+        "graphql-upload": "17.0.0",
         "graphql-ws": "6.0.5",
         "i18next": "25.3.0",
         "jsdom": "26.1.0",
@@ -275,6 +276,7 @@
         "@types/express-session": "1.18.2",
         "@types/express-useragent": "1.0.5",
         "@types/fs-extra": "11.0.4",
+        "@types/graphql-upload": "17.0.0",
         "@types/migrate-mongo": "10.0.5",
         "@types/node": "24.0.7",
         "@types/node-persist": "3.1.8",
