--- a/package.json
+++ b/package.json
@@ -218,6 +218,7 @@
         "@nestjs/core": "11.1.3",
         "@userback/widget": "0.3.11",
         "@vitejs/plugin-react-swc": "3.10.2",
+        "apollo-upload-client": "18.0.1",
         "body-parser": "2.2.0",
         "chalk": "5.4.1",
         "clsx": "2.1.1",
@@ -239,7 +240,7 @@
         "graphql": "16.11.0",
         "graphql-upload": "17.0.0",
         "graphql-ws": "6.0.5",
-        "i18next": "25.3.0",
+        "i18next": "25.3.1",
         "jsdom": "26.1.0",
         "localforage": "1.10.0",
         "migrate-mongo": "12.1.3",
@@ -254,11 +255,11 @@
         "react": "19.1.0",
         "react-dom": "19.1.0",
         "react-hot-toast": "2.5.2",
-        "react-i18next": "15.5.3",
+        "react-i18next": "15.6.0",
         "slugify": "1.6.6",
         "unorm": "1.6.0",
         "uuid": "11.1.0",
-        "vite": "7.0.1",
+        "vite": "7.0.2",
         "ws": "8.18.3",
         "yargs": "18.0.0"
     },
@@ -267,9 +268,10 @@
         "@commitlint/config-conventional": "19.8.1",
         "@eslint/config-inspector": "1.1.0",
         "@microsoft/api-extractor": "7.52.8",
-        "@next/eslint-plugin-next": "15.3.4",
+        "@next/eslint-plugin-next": "15.3.5",
         "@testing-library/jest-dom": "6.6.3",
         "@testing-library/react": "16.3.0",
+        "@types/apollo-upload-client": "18.0.0",
         "@types/body-parser": "1.19.6",
         "@types/compression": "1.8.1",
         "@types/cookie-parser": "1.4.9",
@@ -291,7 +293,7 @@
         "@types/yargs": "17.0.33",
         "@vitest/browser": "3.2.4",
         "eslint": "9.30.1",
-        "eslint-config-next": "15.3.4",
+        "eslint-config-next": "15.3.5",
         "glob": "11.0.3",
         "lint-staged": "16.1.2",
         "node-modules-inspector": "1.0.0",
@@ -299,7 +301,7 @@
         "simple-git-hooks": "2.13.0",
         "tsx": "4.20.3",
         "typescript": "5.8.3",
-        "vite": "7.0.1",
+        "vite": "7.0.2",
         "vite-plugin-dts": "4.5.4",
         "vitest": "3.2.4"
     },
